--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,102 +1,138 @@
-.footer{
-    background: #212121;
-    color: #e6e6e6;
-    font-size: 1.4rem;
-    text-transform: capitalize;
-    font-weight: 200;
+.footer {
+  background: #212121;
+  color: #e6e6e6;
+  font-size: 1.4rem;
+  text-transform: capitalize;
+  font-weight: 200;
+  margin-top: 4rem;
 
- 
-    &__addresses{
-        display: inline-block;
+  &__container {
+    width: var(--content_width_small);
+    margin: 0 auto !important;
+  }
+  &__addresses {
+    display: inline-block;
+  }
+
+  &__contact-info {
+    padding-top: 4rem;
+  }
+
+  &__about {
+    padding-top: 6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    @media screen and(max-width: 600px) {
+    grid-template-columns: 1fr;
+      
     }
- 
-    &__contact-info{
-        padding-top: 4rem;
+  }
+
+  &__links {
+    float: right;
+    @media screen and(max-width: 600px) {
+        display: none;
+      }
+  }
+
+  &__list {
+    list-style: none;
+  }
+
+  &__list-link {
+    text-decoration: none;
+  }
+
+  &__map {
+    &-img {
+      width: 100%;
     }
-
-    &__about{
-        padding-top: 6rem;
+    @media screen and(max-width: 600px) {
+      display: none;
     }
+  }
 
-    &__links{
-        float: right;
-    
+  &__copyright {
+    &-txt {
+      font-size: 1rem;
+      padding-bottom: 5rem;
     }
-
-    &__list{
-        list-style: none;
+    .hr-full {
+      margin: 1rem 0;
     }
+  }
 
-   
-    &__list-link{
-        text-decoration: none;
-    
+  &__btn {
+    float: right;
+  }
+
+  &__h4 {
+    display: inline-block;
+  }
+
+  &__signup {
+    padding-top: 8rem;
+  }
+
+  &__icons {
+    text-align: right;
+    font-size: 1.8rem;
+    display: block;
+    margin-top: 3rem;
+    @media screen and(max-width: 800px) {
+        display: none;
+      }
+  }
+
+  &__icon {
+    padding: 0 1rem;
+  }
+
+  &__email-input {
+    background: transparent;
+    width: 38rem;
+    height: 4.3rem;
+    border: 1px solid #ffffff;
+    padding: 0.5rem;
+    color: $color-white;
+    font-weight: 600;
+    border-radius: 5px;
+
+    &::placeholder {
+      color: #9e9e9e;
     }
-
-    &__map{
-
-        &-img{
-            width: 100%;
-        }
-    }
-    
-    &__copyright{
-
-        &-txt{
-            font-size: 1rem;
-            padding-bottom: 5rem;
-        }
-    }
-
-    &__btn{
-        float: right;
-    }
-
-    &__h4{
-        display: inline-block;
-    }
-
-    &__signup{
-        padding-top: 8rem;
-    }
-
-    &__icons{
-        text-align: right;
-        font-size: 1.8rem;
+    @media screen and(max-width: 600px) {
         display: block;
-        margin-top: 3rem;
-    }
+        margin-bottom: 2rem;
+      }
+  }
+  &__btn {
+    height: 4.3rem;
+    border-radius: 0;
+    border: none;
+    margin-left: 1rem;
+    padding: 0.3rem;
+    outline: none;
+    border-radius: 5px;
+    font-weight: 600;
 
-    &__icon{
-        padding: 0 1rem;
+    &:hover {
+      background: #ffffff;
     }
+  }
 
-    &__email-input{
-        background: transparent;
-        width: 38rem;
-        height: 4.3rem;
-        border: 1px solid #ffffff;
-        padding: .5rem;
+  &__signup-container {
+    float: right;
+  }
 
-        &::placeholder{
-            color: #9e9e9e;
-        }
-    }
-    &__btn{
-        height: 4.3rem;
-        border-radius: 0;
-        border: none;
-        margin-left: 1rem;
-        padding: .3rem;
-        outline: none;
+  .bold-txt {
+    font-size: 18px;
+    color: #ffffff;
+    font-family: "PT Serif";
+    font-weight: 700;
+  }
 
-        &:hover{
-            background: #ffffff;
-        }
-    }
+  @media screen and(max-width: 600px) {
 
-    &__signup-container{
-        float: right;
-    }
-  
+  }
 }
